clippy_errors.txt
    Blocking waiting for file lock on build directory
    Checking mapmap-mcp v0.2.0 (C:\Users\Vinyl\Desktop\VJMapper\VjMapper\crates\mapmap-mcp)
    Checking mapmap v0.2.0 (C:\Users\Vinyl\Desktop\VJMapper\VjMapper\crates\mapmap)
error[E0412]: cannot find type `OscillatorRenderer` in this scope
  --> crates\mapmap\src\main.rs:86:33
   |
86 |     oscillator_renderer: Option<OscillatorRenderer>,
   |                                 ^^^^^^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this struct
   |
 9 + use mapmap_render::OscillatorRenderer;
   |

error[E0425]: cannot find value `main_window_context` in this scope
   --> crates\mapmap\src\main.rs:127:13
    |
127 |             main_window_context.surface_config.width,
    |             ^^^^^^^^^^^^^^^^^^^
    |
help: the binding `main_window_context` is available in a different scope in the same function
   --> crates\mapmap\src\main.rs:115:17
    |
115 |             let main_window_context = window_manager.get(main_window_id).unwrap();
    |                 ^^^^^^^^^^^^^^^^^^^

error[E0425]: cannot find value `main_window_context` in this scope
   --> crates\mapmap\src\main.rs:128:13
    |
128 |             main_window_context.surface_config.height,
    |             ^^^^^^^^^^^^^^^^^^^
    |
help: the binding `main_window_context` is available in a different scope in the same function
   --> crates\mapmap\src\main.rs:115:17
    |
115 |             let main_window_context = window_manager.get(main_window_id).unwrap();
    |                 ^^^^^^^^^^^^^^^^^^^

error[E0425]: cannot find value `main_window_context` in this scope
   --> crates\mapmap\src\main.rs:136:17
    |
136 |                 main_window_context.surface_config.width,
    |                 ^^^^^^^^^^^^^^^^^^^
    |
help: the binding `main_window_context` is available in a different scope in the same function
   --> crates\mapmap\src\main.rs:115:17
    |
115 |             let main_window_context = window_manager.get(main_window_id).unwrap();
    |                 ^^^^^^^^^^^^^^^^^^^

error[E0425]: cannot find value `main_window_context` in this scope
   --> crates\mapmap\src\main.rs:137:17
    |
137 |                 main_window_context.surface_config.height,
    |                 ^^^^^^^^^^^^^^^^^^^
    |
help: the binding `main_window_context` is available in a different scope in the same function
   --> crates\mapmap\src\main.rs:115:17
    |
115 |             let main_window_context = window_manager.get(main_window_id).unwrap();
    |                 ^^^^^^^^^^^^^^^^^^^

error[E0425]: cannot find value `main_window_context` in this scope
   --> crates\mapmap\src\main.rs:143:17
    |
143 |                 main_window_context.surface_config.width,
    |                 ^^^^^^^^^^^^^^^^^^^
    |
help: the binding `main_window_context` is available in a different scope in the same function
   --> crates\mapmap\src\main.rs:115:17
    |
115 |             let main_window_context = window_manager.get(main_window_id).unwrap();
    |                 ^^^^^^^^^^^^^^^^^^^

error[E0425]: cannot find value `main_window_context` in this scope
   --> crates\mapmap\src\main.rs:144:17
    |
144 |                 main_window_context.surface_config.height,
    |                 ^^^^^^^^^^^^^^^^^^^
    |
help: the binding `main_window_context` is available in a different scope in the same function
   --> crates\mapmap\src\main.rs:115:17
    |
115 |             let main_window_context = window_manager.get(main_window_id).unwrap();
    |                 ^^^^^^^^^^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared type `OscillatorRenderer`
   --> crates\mapmap\src\main.rs:211:41
    |
211 |         let oscillator_renderer = match OscillatorRenderer::new(
    |                                         ^^^^^^^^^^^^^^^^^^ use of undeclared type `OscillatorRenderer`
    |
help: consider importing this struct
    |
  9 + use mapmap_render::OscillatorRenderer;
    |

error[E0609]: no field `last_update` on type `&mut App`
   --> crates\mapmap\src\main.rs:681:50
    |
681 |         let delta_time = now.duration_since(self.last_update).as_secs_f32();
    |                                                  ^^^^^^^^^^^ unknown field
    |
    = note: available fields are: `window_manager`, `ui_state`, `backend`, `texture_pool`, `compositor` ... and 20 others

error[E0609]: no field `last_update` on type `&mut App`
   --> crates\mapmap\src\main.rs:682:14
    |
682 |         self.last_update = now;
    |              ^^^^^^^^^^^ unknown field
    |
    = note: available fields are: `window_manager`, `ui_state`, `backend`, `texture_pool`, `compositor` ... and 20 others

Some errors have detailed explanations: E0412, E0425, E0433, E0609.
For more information about an error, try `rustc --explain E0412`.
error: could not compile `mapmap` (bin "MapFlow") due to 10 previous errors
